Fix header overflow behavior

--- a/static/style/header/header.css
+++ b/static/style/header/header.css
@@ -6,7 +6,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  padding: 8px 0;
+  padding: 8px;
   box-sizing: border-box;
   background-color: white;
 }
@@ -14,6 +14,7 @@
 #header-container::after {
   content: "";
   position: absolute;
+  left: 0;
   top: 100%;
   display: block;
   width: 100%;
@@ -23,11 +24,12 @@
 
 header {
   anchor-name: --header;
-  z-index: 3;
   display: grid;
-  grid-template-columns: 1fr auto 1fr;
+  grid-template-columns: 4rem auto 4rem;
   gap: 2rem;
   width: fit-content;
+  max-width: 100%;
+  box-sizing: border-box;
   margin: auto;
 }
 
@@ -45,16 +47,8 @@ header > div {
   align-content: center;
 }
 
-header > :first-child {
-  text-align: left;
-}
-
-header > :nth-child(2) {
+header > * {
   text-align: center;
-}
-
-header > :last-child {
-  text-align: right;
 }
 
 header h1 {
